# src/shared/api/types/gen/getRemindersParams.ts
@@ -11,6 +11,11 @@ import type { ReminderSortField } from './reminderSortField';
 export type GetRemindersParams = {
 	deliveryStatus?: ReminderDeliveryStatus;
 	/**
+	 * @minLength 0
+	 * @maxLength 100
+	 */
+	searchText?: string;
+	/**
 	 * @minimum 1
 	 * @maximum 21474837
 	 */
