# src/shared/api/types/gen/getTradesParams.ts
@@ -15,6 +15,11 @@ export type GetTradesParams = {
 	startDate?: string;
 	endDate?: string;
 	/**
+	 * @minLength 0
+	 * @maxLength 100
+	 */
+	searchText?: string;
+	/**
 	 * @minimum 1
 	 * @maximum 21474837
 	 */
